--- a/2024.html
+++ b/2024.html
@@ -791,8 +791,12 @@
                     <div class="col-3">
                         <a href="https://www.facebook.com/casasruralescordoba" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-3">
+                        <a href="mailto:lasalaespaciodecreacion@gmail.com" target="_blank"><img src="./images/logo-lasala-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-12">
                     <h3 class="mb-lg-0 text-yellow-dark-custom">Colaboradores 2025</h3>
@@ -820,7 +824,22 @@
                         <a href="https://www.kidsandus.es/" target="_blank"><img src="./images/kidus-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://mamcordoba.com/" target="_blank"><img src="./images/mam-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="#eolter" target="_blank"><img src="./images/eolter-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://gruporochel.com/" target="_blank"><img src="./images/rochel-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://gallarcres.com/" target="_blank"><img src="./images/gallarcres-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://www.facebook.com/p/DobleTrack-100083390556313" target="_blank"><img src="./images/dobletrack-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.airesport.es/" target="_blank"><img src="./images/airesport-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://www.facebook.com/restaurantebarequis" target="_blank"><img src="./images/equis-logo-blanco.png" style="width:100%; height: auto" /></a>
@@ -833,6 +852,24 @@
                     </div>
                     <div class="col-2">
                         <a href="https://www.ruizre.es/" target="_blank"><img src="./images/ruizre-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.tosfrit.es/" target="_blank"><img src="./images/tosfrit-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://fotoregalopersonalizado.es/" target="_blank"><img src="./images/fotoregalo-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://eosiberica.es/" target="_blank"><img src="./images/eosiberica-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.facebook.com/DeportesFernandoPinedaRunning" target="_blank"><img src="./images/fernandopineda-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://saltamontes.net/" target="_blank"><img src="./images/saltamontes-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://aristarun.es/inicio" target="_blank"><img src="./images/aristarun-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
