--- a/2023.html
+++ b/2023.html
@@ -435,7 +435,7 @@
                         <a href="https://mamcordoba.com/" target="_blank"><img src="./images/mam-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
-                        <a href="#eolter" target="_blank"><img src="./images/eolter-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://www.linkedin.com/company/eolter/" target="_blank"><img src="./images/eolter-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://gruporochel.com/" target="_blank"><img src="./images/rochel-logo-blanco.png" style="width:100%; height: auto" /></a>
