--- a/2024.html
+++ b/2024.html
@@ -792,7 +792,7 @@
                         <a href="https://www.facebook.com/casasruralescordoba" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
-                        <a href="mailto:lasalaespaciodecreacion@gmail.com" target="_blank"><img src="./images/logo-lasala-blanco.png" style="width:100%; height: auto" /></a>
+                        <a href="https://linktr.ee/LASALAespaciodecreacion" target="_blank"><img src="./images/logo-lasala-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                 </div>
             </div>
