--- a/index.html
+++ b/index.html
@@ -384,6 +384,9 @@
                     <div class="col-3">
                         <a href="https://linktr.ee/LASALAespaciodecreacion" target="_blank"><img src="./images/logo-lasala-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-3">
+                        <a><img src="./images/copravi-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
 
