--- a/cordoba-la-llana.html
+++ b/cordoba-la-llana.html
@@ -286,6 +286,9 @@
                         <a href="https://gallarcres.com/" target="_blank"><img src="./images/gallarcres-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://coto.pro/" target="_blank"><img src="./images/coto-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://www.facebook.com/p/DobleTrack-100083390556313" target="_blank"><img src="./images/dobletrack-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
