--- a/2023.html
+++ b/2023.html
@@ -321,6 +321,17 @@
         <div class="container">
 
             <div class="row">
+                <div class="col-12">
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">A beneficio de</h2>
+                </div>
+                <div class="row">
+                    <div class="col-8">
+                        <a href="https://www.contraelcancer.es/es" target="_blank"><img src="./images/cancer-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
 
                 <div class="col-12">
                     <h2 class="mb-lg-0 text-yellow-dark-custom">Patrocinadores Principales 2025</h2>
