--- a/voluntarios.html
+++ b/voluntarios.html
@@ -178,7 +178,16 @@
     <!-- FOOTER -->
     <footer class="site-footer blue-custom-bg">
         <div class="container">
-
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="mb-lg-0 text-yellow-dark-custom">A beneficio de</h2>
+                </div>
+                <div class="row">
+                    <div class="col-8">
+                        <a href="https://www.contraelcancer.es/es" target="_blank"><img src="./images/cancer-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                </div>
+            </div>
             <div class="container">
 
                 <div class="row">
@@ -371,7 +380,7 @@
                     <p class="copyright-text">Copyright © Califa Mountain Festival</p>
                 </div>
             </div>
-    </footer>
+</footer>
     <!--
 
 
