--- a/impacto.html
+++ b/impacto.html
@@ -238,9 +238,6 @@
                         <a href="https://www.sanalemo.es/" target="_blank"><img src="./images/sanalemo-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
-                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
-                    </div>
-                    <div class="col-3">
                         <a href="https://www.facebook.com/casasruralescordoba" target="_blank"><img src="./images/carusihome-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-3">
@@ -268,6 +265,12 @@
                     </div>
                     <div class="col-2">
                         <a href="https://www.facebook.com/profile.php?id=100072771710690" target="_blank"><img src="./images/rialto-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://www.trefiladosurbano.com/" target="_blank"><img src="./images/trefiladosurbano-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
+                        <a href="https://labocapublicidad.es/" target="_blank"><img src="./images/laboca-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
                         <a href="https://elictem.com/" target="_blank"><img src="./images/elictem-logo-blanco.png" style="width:100%; height: auto" /></a>
