--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 
                                 <a><img class="artists-image" src="2025/inscripciones.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
+                                <a><img class="artists-image" src="2025/inscripciones-cadeba.png" /></a>
 
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
@@ -227,6 +228,16 @@
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">SENDERISMO - SÁBADO 20 DE SEPTIEMBRE</h5>
                                     <h6 class="card-title text-white">SENDERISMO (10K 350+/350-) Actividad no competitiva</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">CxM EDAD ESCOLAR CADEBA - SÁBADO 20 DE SEPTIEMBRE</h5>
+                                    <h6 class="card-title text-white">PREBENJAMIN (1K 30+/30-)</h6>
+                                    <h6 class="card-title text-white">BENJAMIN (2K 55+/55-)</h6>
+                                    <h6 class="card-title text-white">ALEVIN (2.7K 70+/70-)</h6>
+                                    <h6 class="card-title text-white">INFANTIL (3.8K 180+/180-)</h6>
+                                    <h6 class="card-title text-white">CADETE (12.8K 450+/450-)</h6>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
