--- a/reglamento.html
+++ b/reglamento.html
@@ -3,7 +3,7 @@
 
 <head>
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
-    <meta http-equiv="refresh" content="0; url=2025/reglamento-califamountainfestival-2025-carreras.pdf" />
+    <meta http-equiv="refresh" content="0; url=2025/reglamentos.pdf" />
 
     <meta charset="UTF-8">
     <meta name="description" content="">
