--- a/presentacion.html
+++ b/presentacion.html
@@ -290,6 +290,9 @@
                         <a href="https://coto.pro/" target="_blank"><img src="./images/coto-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
+                        <a href="https://bellidoextintores.com/" target="_blank"><img src="./images/bellido-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://www.facebook.com/p/DobleTrack-100083390556313" target="_blank"><img src="./images/dobletrack-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
