--- a/index.html
+++ b/index.html
@@ -263,6 +263,23 @@
 
                 </div>
 
+
+                <div class="col-lg-12 col-12">
+                    <div class="card margin-bottom-20px blue-custom-bg border-none">
+                        <div class="card-body">
+                            <h5 class="card-title text-white" id="presentacion"><i class=""></i></h5>
+                            <div class="col-lg-12 col-12">
+                                <div class="card margin-bottom-20px red-custom-bg">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-blue-custom">Presentación 2025</h5>
+                                        <a href="fotos-presentacion-2025" target="_blank"><img class="artists-image" src="2025/presentacion-1.png" /></a> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- VIDEOS -->
                 <div class="col-lg-12 col-12">
                     <div class="card margin-bottom-20px blue-custom-bg border-none">
