--- a/quedadabrooks.html
+++ b/quedadabrooks.html
@@ -251,6 +251,9 @@
                     <div class="col-3">
                         <a><img src="./images/copravi-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
+                    <div class="col-4">
+                        <a href="#podologo" target="_blank"><img src="./images/luquerivera-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
                 </div>
             </div>
 
