--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                                 <a><img class="artists-image" src="2025/inscripciones.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-cadeba.png" /></a>
-
+                                <a><img class="artists-image" src="2025/inscripciones-marchanordica.png" /></a>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
@@ -238,6 +238,12 @@
                                     <h6 class="card-title text-white">ALEVIN (2.7K 70+/70-)</h6>
                                     <h6 class="card-title text-white">INFANTIL (3.8K 180+/180-)</h6>
                                     <h6 class="card-title text-white">CADETE (12.8K 450+/450-)</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">MARCHA NÓRDICA - DOMINGO 21 DE SEPTIEMBRE</h5>
+                                    <h6 class="card-title text-white">MARCHA NÓRDICA Actividad no competitiva</h6>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
