--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
+                            <a class="nav-link click-scroll text-yellow-dark-custom" href="inscripciones">INSCRIPCIONES</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="2025">Edición 2025</a>
                         </li>
                         <li class="nav-item">
@@ -94,9 +97,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="2022">Edición 2022</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="blog">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="contacto">Contacto</a>
@@ -186,6 +186,7 @@
                                 <h6 class="card-title text-white">ESTE AÑO NO HAY OPCIÓN DE ALBERGUE AL ENCONTRARSE EN OBRAS.</h6>
 
                                 <a><img class="artists-image" src="2025/inscripciones.png" /></a>
+                                <a><img class="artists-image" src="2025/tiempos-corte.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-cadeba.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-marchanordica.png" /></a>
