--- a/inscripciones/index.html
+++ b/inscripciones/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
-    <meta http-equiv="refresh" content="0; url=/2024#inscripciones" />
+    <meta http-equiv="refresh" content="0; url=/inscripciones" />
 
     <meta charset="UTF-8">
     <meta name="description" content="">
