--- a/inscripciones.html
+++ b/inscripciones.html
@@ -2,28 +2,16 @@
 <html lang="en">
 
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VFNW9DSY83"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'G-VFNW9DSY83');
-    </script>
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
-    <meta http-equiv="refresh" content="0; url=index" />
-    <meta charset="utf-8">
-    <meta name="description" content="Califa Mountain Festival es un fin de semana de carreras por etapas en montaña, senderismo y actividades infantiles, charlas, ponencias, concierto">
-    <meta name="keywords" content="trail, running, cxm, montaña, etapas, trailrunning">
-    <meta name="author" content="Califa Mountain Festival - CD Running Series">
-    <meta name="copyright" content="Califa Mountain Festival - CD Running Series">
-    <meta name="robots" content="index, follow" />
+    <meta http-equiv="refresh" content="0; url=https://www.deporticket.com/web-evento/11431-califa-mountain-festival" />
+
+    <meta charset="UTF-8">
+    <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <!-- Title -->
-    <title>Inscripciones III Califa MountainFestival 2024</title>
+    <title>Inscripciones Califa Mountain Festival</title>
 
     <!-- Favicon -->
     <link rel="icon" href="assets/favicon.ico">
