--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px red-custom-bg border-none">
                             <div class="card-body">
-                                <h5 class="card-title text-blue-custom">INSCRIPCIONES ABIERTAS (CxM + SENDERISMO)</h5>
+                                <h5 class="card-title text-blue-custom">INSCRIPCIONES ABIERTAS</h5>
                                 <h6 class="card-title text-white">Las inscripciones no incluyen prenda conmemorativa, tanto la camiseta como el cortavientos pueden adquirise si se desea en una de las secciones de la inscripción</h6>
 
                                 <h6 class="card-title text-white">Apúntate a las 3 Etapas en INDIVIDUAL, PAREJA O POR RELEVOSx3 (1 ETAPA CADA PARTICIPANTE DEL EQUIPO)</h6>
@@ -209,14 +209,14 @@
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">ETAPA 1 VIERNES CxM NOCTURNA</h5>
-                                    <h6 class="card-title text-white">CxM NOCTURNA (14k 700+/700-) FRONTAL OBLIGATORIO</h6>
+                                    <h6 class="card-title text-white">CxM NOCTURNA (15k 700+/700-) FRONTAL OBLIGATORIO</h6>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">ETAPA 2 SÁBADO CxM</h5>
-                                    <h6 class="card-title text-white">CxM LARGA (27K 1000+/1000-) Puntuable Copa CxM Córdoba Larga y 20K UTMB Index</h6>
-                                    <h6 class="card-title text-white">CxM CORTA (9-12K 400+-600+) Puntuable Copa CxM Córdoba Corta y Trofeo UCO CxM</h6>
+                                    <h6 class="card-title text-white">CxM LARGA (24.5K 1000+/1000-) Puntuable Copa CxM Córdoba Larga y 20K UTMB Index</h6>
+                                    <h6 class="card-title text-white">CxM CORTA (13.2 500+/500-) Puntuable Copa CxM Córdoba Corta y Trofeo UCO CxM</h6>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
@@ -236,8 +236,8 @@
                                     <h5 class="card-title text-blue-custom">CxM EDAD ESCOLAR CADEBA - SÁBADO 20 DE SEPTIEMBRE</h5>
                                     <h6 class="card-title text-white">PREBENJAMIN (1K 30+/30-)</h6>
                                     <h6 class="card-title text-white">BENJAMIN (2K 55+/55-)</h6>
-                                    <h6 class="card-title text-white">ALEVIN (2.7K 70+/70-)</h6>
-                                    <h6 class="card-title text-white">INFANTIL (3.8K 180+/180-)</h6>
+                                    <h6 class="card-title text-white">ALEVIN (3.8K 180+/180-)</h6>
+                                    <h6 class="card-title text-white">INFANTIL (5.0K 200+/200-)</h6>
                                     <h6 class="card-title text-white">CADETE (12.8K 450+/450-)</h6>
                                 </div>
                             </div>
