--- a/voluntarios.html
+++ b/voluntarios.html
@@ -240,6 +240,9 @@
                         <div class="col-2">
                             <a href="https://www.ajeandalucia.org/cordoba/" target="_blank"><img src="./images/aje-logo-blanco.png" style="width:100%; height: auto" /></a>
                         </div>
+                        <div class="col-3">
+                            <a href="https://sport.ec.europa.eu/european-week-of-sport" target="_blank"><img src="./images/beactive-logo-blanco.png" style="width:100%; height: auto" /></a>
+                        </div>
                     </div>
                 </div>
 
