--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">ETAPA 1 VIERNES CxM NOCTURNA</h5>
-                                    <h6 class="card-title text-white">CxM NOCTURNA (15k 700+/700-) FRONTAL OBLIGATORIO</h6>
+                                    <h6 class="card-title text-white">CxM NOCTURNA (15k 700+/700-) FRONTAL OBLIGATORIO Puntuable 20K UTMB Index</h6>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
