--- a/impacto.html
+++ b/impacto.html
@@ -87,6 +87,9 @@
                             <a class="nav-link click-scroll" href="inscripciones">INSCRIPCIONES</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link click-scroll" href="tienda">TIENDA</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link click-scroll" href="2025">Edición 2025</a>
                         </li>
                         <li class="nav-item">
@@ -97,9 +100,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="2022">Edición 2022</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="contacto">Contacto</a>
                         </li>
                     </ul>
                 </div>
