--- a/voluntarios.html
+++ b/voluntarios.html
@@ -84,6 +84,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
+                            <a class="nav-link click-scroll" href="tienda">TIENDA</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link click-scroll" href="2025">Edición 2025</a>
                         </li>
                         <li class="nav-item">
@@ -97,12 +100,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="contacto">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="blog">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="index">Inicio</a>
                         </li>
                     </ul>
                 </div>
