--- a/contacto.html
+++ b/contacto.html
@@ -87,6 +87,9 @@
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="inscripciones">INSCRIPCIONES</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link click-scroll" href="tienda">TIENDA</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link click-scroll" href="2025">Edición 2025</a>
                         </li>
                         <li class="nav-item">
