--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="inscripciones">INSCRIPCIONES</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link click-scroll" href="tienda">TIENDA</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="2025">Edición 2025</a>
                         </li>
                         <li class="nav-item">
@@ -97,9 +100,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="2022">Edición 2022</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="contacto">Contacto</a>
                         </li>
                     </ul>
 
@@ -185,6 +185,7 @@
                                 <h6 class="card-title text-white">También es posible apuntarse por separado en cualquiera de las etapas</h6>
                                 <h6 class="card-title text-white">ESTE AÑO NO HAY OPCIÓN DE ALBERGUE AL ENCONTRARSE EN OBRAS.</h6>
 
+                                <a><img class="artists-image" src="2025/tienda.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones.png" /></a>
                                 <a><img class="artists-image" src="2025/tiempos-corte.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
@@ -193,8 +194,10 @@
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
-                                    <a href="https://www.deporticket.com/web-evento/11431-califa-mountain-festival" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">INSCRÍBETE AQUI</a>
+                                    <a href="inscripciones" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">INSCRÍBETE AQUI</a>
                                     <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">REGLAMENTO</a>
+                                    <a href="tienda" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">TIENDA</a>
+
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
