--- a/2022.html
+++ b/2022.html
@@ -460,6 +460,9 @@
                 </div>
                 <div class="row">
                     <div class="col-2">
+                        <a href="https://gruposercolu.com/" target="_blank"><img src="./images/sercolu-logo-blanco.png" style="width:100%; height: auto" /></a>
+                    </div>
+                    <div class="col-2">
                         <a href="https://golfcordoba.com/" target="_blank"><img src="./images/golf-logo-blanco.png" style="width:100%; height: auto" /></a>
                     </div>
                     <div class="col-2">
