--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                                 <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-cadeba.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-marchanordica.png" /></a>
+                                <a><img class="artists-image" src="2025/inscripciones-ocr-infantil.png" /></a>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
@@ -248,6 +249,12 @@
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">MARCHA NÓRDICA - DOMINGO 21 DE SEPTIEMBRE</h5>
                                     <h6 class="card-title text-white">MARCHA NÓRDICA Actividad no competitiva</h6>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">CARRERA OBSTÁCULOS INFANTIL - DOMINGO 21 DE SEPTIEMBRE</h5>
+                                    <h6 class="card-title text-white">Actividad no competitiva de 3 a 16 años</h6>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
