--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                 <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-cadeba.png" /></a>
                                 <a><img class="artists-image" src="2025/inscripciones-marchanordica.png" /></a>
-                                <a><img class="artists-image" src="2025/inscripciones-ocr-infantil.png" /></a>
+                                <a><img class="artists-image" src="2025/inscripciones-ocr-infantil.jpg" /></a>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
