--- a/index.html
+++ b/index.html
@@ -211,22 +211,45 @@
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
+
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">ETAPA 1 VIERNES CxM NOCTURNA</h5>
                                     <h6 class="card-title text-white">CxM NOCTURNA (15k 700+/700-) FRONTAL OBLIGATORIO Puntuable 20K UTMB Index</h6>
+                                    <div>
+                                        <a href="#" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">TRACK PRIVADO</a>
+                                    </div>
+                                    <a><img class="artists-image" src="2025/ficha-etapa1.png" /></a>
                                 </div>
+
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">ETAPA 2 SÁBADO CxM</h5>
                                     <h6 class="card-title text-white">CxM LARGA (24.5K 1000+/1000-) Puntuable Copa CxM Córdoba Larga y 20K UTMB Index</h6>
+                                    <div>
+                                        <a href="2025/20-sabado-etapa2-larga-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
+                                    </div>
+                                    <a><img class="artists-image" src="2025/ficha-etapa2.png" /></a>
+                                </div>
+                            </div>
+                            <div class="card margin-bottom-20px red-custom-bg border-none">
+                                <div class="card-body">
+                                    <h5 class="card-title text-blue-custom">ETAPA 2 SÁBADO CxM</h5>
                                     <h6 class="card-title text-white">CxM CORTA (13.2 500+/500-) Puntuable Copa CxM Córdoba Corta y Trofeo UCO CxM</h6>
+                                    <div>
+                                        <a href="2025/20-sabado-etapa2-corta-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
+                                    </div>
+                                    <a><img class="artists-image" src="2025/ficha-corta.png" /></a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">ETAPA 3 DOMINGO CxM CONTRARRELOJ</h5>
                                     <h6 class="card-title text-white">CxM CONTRARRELOJ (12K 700+/700-) Salidas individuales en sentido inverso a la clasificación provisional. Los que solo hacen esta prueba, irá en sentido de número de dorsal.</h6>
+                                    <div>
+                                        <a href="2025/21-domingo-etapa3-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
+                                    </div>
+                                    <a><img class="artists-image" src="2025/ficha-etapa3.png" /></a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
