--- a/index.html
+++ b/index.html
@@ -265,7 +265,12 @@
                                     <h6 class="card-title text-white">BENJAMIN (2K 55+/55-)</h6>
                                     <h6 class="card-title text-white">ALEVIN (3.8K 180+/180-)</h6>
                                     <h6 class="card-title text-white">INFANTIL (5.0K 200+/200-)</h6>
-                                    <h6 class="card-title text-white">CADETE (12.8K 450+/450-)</h6>
+                                    <h6 class="card-title text-white">CADETE (13.2K 500+/500-) - CxM CORTA</h6>
+                                    <div>
+                                        <a href="2025/gpx/20-sabado-etapa2-corta-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
+                                    </div>
+                                    <a><img class="artists-image" src="2025/ficha-corta.png" /></a>
+
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
