--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="inscripciones">INSCRIPCIONES</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="tienda">TIENDA</a>
+                            <a class="nav-link click-scroll" href="guia">GUIA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll text-yellow-dark-custom" href="2025">Edición 2025</a>
@@ -177,118 +177,33 @@
                 <div class="row">
                     <div class="col-lg-12 col-12">
                         <div class="card margin-bottom-20px red-custom-bg border-none">
-                            <div class="card-body">
-                                <h5 class="card-title text-blue-custom">INSCRIPCIONES ABIERTAS</h5>
-                                <h6 class="card-title text-white">Las inscripciones no incluyen prenda conmemorativa, tanto la camiseta como el cortavientos pueden adquirise si se desea en una de las secciones de la inscripción</h6>
-
-                                <h6 class="card-title text-white">Apúntate a las 3 Etapas en INDIVIDUAL, PAREJA O POR RELEVOSx3 (1 ETAPA CADA PARTICIPANTE DEL EQUIPO)</h6>
-                                <h6 class="card-title text-white">También es posible apuntarse por separado en cualquiera de las etapas</h6>
-                                <h6 class="card-title text-white">ESTE AÑO NO HAY OPCIÓN DE ALBERGUE AL ENCONTRARSE EN OBRAS.</h6>
-
-                                <a><img class="artists-image" src="2025/tienda.png" /></a>
-                                <a><img class="artists-image" src="2025/inscripciones.png" /></a>
-                                <a><img class="artists-image" src="2025/tiempos-corte.png" /></a>
-                                <a><img class="artists-image" src="2025/inscripciones-senderismo.png" /></a>
-                                <a><img class="artists-image" src="2025/inscripciones-cadeba.png" /></a>
-                                <a><img class="artists-image" src="2025/inscripciones-marchanordica.png" /></a>
-                                <a><img class="artists-image" src="2025/inscripciones-ocr-infantil.jpeg" /></a>
-                            </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
-                                    <a href="inscripciones" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">INSCRÍBETE AQUI</a>
-                                    <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">REGLAMENTO</a>
-                                    <a href="tienda" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">TIENDA</a>
-
+                                    <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
+                                    <a href="guia-cadeba" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
+                                    <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR REGLAMENTO</a>
+                                    <a href="inscripciones" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">INSCRIPCIONES</a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">3 ETAPAS</h5>
-                                    <h6 class="card-title text-white">3-Etapas Individual</h6>
-                                    <h6 class="card-title text-white">3-Etapas Individual Base (15-20 años). El sábado harán la prueba corta.</h6>
-                                    <h6 class="card-title text-white">3-Etapas Parejas (siempre juntas de inicio a fin en cada etapa)</h6>
-                                    <h6 class="card-title text-white">3-Etapas por Relevos de 3. Cada participante hace 1 etapa</h6>
-                                </div>
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">ETAPA 1 VIERNES CxM NOCTURNA</h5>
-                                    <h6 class="card-title text-white">CxM NOCTURNA (15k 700+/700-) FRONTAL OBLIGATORIO Puntuable 20K UTMB Index</h6>
-                                    <div>
-                                        <a class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">TRACK PRIVADO</a>
-                                    </div>
-                                    <a><img class="artists-image" src="2025/ficha-etapa1.png" /></a>
-                                </div>
-
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">ETAPA 2 SÁBADO CxM</h5>
-                                    <h6 class="card-title text-white">CxM LARGA (24.5K 1000+/1000-) Puntuable Copa CxM Córdoba Larga y 20K UTMB Index</h6>
-                                    <div>
-                                        <a href="2025/gpx/20-sabado-etapa2-larga-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
-                                    </div>
-                                    <a><img class="artists-image" src="2025/ficha-etapa2.png" /></a>
+                                    <h5 class="card-title text-blue-custom">PROGRAMACIÓN COMPLETA</h5>
+                                    <a><img class="artists-image" src="2025/programacion-completa.png" /></a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">ETAPA 2 SÁBADO CxM</h5>
-                                    <h6 class="card-title text-white">CxM CORTA (13.2 500+/500-) Puntuable Copa CxM Córdoba Corta y Trofeo UCO CxM</h6>
-                                    <div>
-                                        <a href="2025/gpx/20-sabado-etapa2-corta-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
-                                    </div>
-                                    <a><img class="artists-image" src="2025/ficha-corta.png" /></a>
+                                    <h5 class="card-title text-blue-custom">INFO TÉCNICA</h5>
+                                    <a><img class="artists-image" src="2025/info-tecnica.png" /></a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">ETAPA 3 DOMINGO CxM CONTRARRELOJ</h5>
-                                    <h6 class="card-title text-white">CxM CONTRARRELOJ (12K 700+/700-) Salidas individuales en sentido inverso a la clasificación provisional. Los que solo hacen esta prueba, irá en sentido de número de dorsal.</h6>
-                                    <div>
-                                        <a href="2025/gpx/21-domingo-etapa3-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
-                                    </div>
-                                    <a><img class="artists-image" src="2025/ficha-etapa3.png" /></a>
+                                    <h5 class="card-title text-blue-custom">GUÍA COMPLETA</h5>
+                                    <a><img class="artists-image" src="2025/guia.png" /></a>
                                 </div>
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">SENDERISMO - SÁBADO 20 DE SEPTIEMBRE</h5>
-                                    <h6 class="card-title text-white">SENDERISMO (10K 350+/350-) Actividad no competitiva</h6>
-                                </div>
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">CxM EDAD ESCOLAR CADEBA - SÁBADO 20 DE SEPTIEMBRE</h5>
-                                    <h6 class="card-title text-white">PREBENJAMIN (1K 30+/30-)</h6>
-                                    <h6 class="card-title text-white">BENJAMIN (2K 55+/55-)</h6>
-                                    <h6 class="card-title text-white">ALEVIN (3.8K 180+/180-)</h6>
-                                    <h6 class="card-title text-white">INFANTIL (5.0K 200+/200-)</h6>
-                                    <h6 class="card-title text-white">CADETE (13.2K 500+/500-) - CxM CORTA</h6>
-                                    <div>
-                                        <a href="2025/gpx/20-sabado-etapa2-corta-2025.gpx" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR TRACK GPX</a>
-                                    </div>
-                                    <a><img class="artists-image" src="2025/ficha-corta.png" /></a>
-
-                                </div>
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">MARCHA NÓRDICA - DOMINGO 21 DE SEPTIEMBRE</h5>
-                                    <h6 class="card-title text-white">MARCHA NÓRDICA Actividad no competitiva</h6>
-                                </div>
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">CARRERA OBSTÁCULOS INFANTIL - DOMINGO 21 DE SEPTIEMBRE</h5>
-                                    <h6 class="card-title text-white">Actividad no competitiva de 3 a 16 años</h6>
-                                </div>
-                            </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <a class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">PRÓXIMAMENTE INSCRIPCIONES OTRAS ACTIVIDADES</a>
-                                </div>
+                                <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
+                                <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
                             </div>
                         </div>
                     </div>
@@ -297,11 +212,6 @@
                             <div class="card-body">
                                 <h5 class="card-title text-red-custom">2025. VUELVE CALIFA MOUNTAIN FESTIVAL</h5>
                                 <a><img class="artists-image" src="2025/cartel-califamountainfestival-25-web.png" /></a>
-                            </div>
-                            <div class="card-body">
-                                <a href="https://www.deporticket.com/web-evento/11431-califa-mountain-festival" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">INSCRÍBETE AQUI</a>
-                                <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px red-custom-bg">REGLAMENTO CxM</a>
-
                             </div>
                         </div>
                     </div>
