--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll text-yellow-dark-custom" href="inscripciones">INSCRIPCIONES</a>
+                            <a class="nav-link click-scroll text-yellow-dark-custom" href="inscritos">INSCRITOS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="guia">GUIA</a>
@@ -196,23 +196,25 @@
                                     <h5 class="card-title text-blue-custom">LISTADO INSCRITOS</h5>
                                     <a><img class="artists-image" src="2025/listado-inscritos.png" /></a>
                                 </div>
+                                <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
+
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">PROGRAMACIÓN COMPLETA</h5>
-                                    <a><img class="artists-image" src="2025/programacion-completa.png" /></a>
+                                    <a href="2025/programacion-completa.png" target="_blank"><img class="artists-image" src="2025/programacion-completa.png" /></a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">INFO TÉCNICA</h5>
-                                    <a><img class="artists-image" src="2025/info-tecnica.png" /></a>
+                                    <a href="2025/info-tecnica.png" target="_blank"><img class="artists-image" src="2025/info-tecnica.png" /></a>
                                 </div>
                             </div>
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">GUÍA COMPLETA</h5>
-                                    <a><img class="artists-image" src="2025/guia.png" /></a>
+                                    <a href="guia" target="_blank"><img class="artists-image" src="2025/guia.png" /></a>
                                 </div>
                                 <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
                                 <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
