--- a/index.html
+++ b/index.html
@@ -182,15 +182,13 @@
                                     <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
                                     <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
                                     <a href="guia-cadeba" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
+                                    <a href="2025/autorizacion-dorsal.pdf" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR AUTORIZACION</a>
+                                    <a href="mailto:eventoscalifamountainfestival@gmail.com" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ENVIAR AUTORIZACION MAIL</a>
+                                    <a href="https://api.whatsapp.com/send/?phone=622775257&text=autorizacion+dorsal+califa&type=phone_number&app_absent=0" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">ENVIAR AUTORIZACION WHATSAPP</a>
                                     <a href="reglamento" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR REGLAMENTO</a>
                                 </div>
                             </div>
-                            <div class="card margin-bottom-20px red-custom-bg border-none">
-                                <div class="card-body">
-                                    <h5 class="card-title text-blue-custom">INSCRIPCIONES CERRADAS</h5>
-                                    <a><img class="artists-image" src="2025/cerradas.png" /></a>
-                                </div>
-                            </div>
+
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
                                     <h5 class="card-title text-blue-custom">LISTADO INSCRITOS</h5>
@@ -218,6 +216,12 @@
                                 </div>
                                 <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
                                 <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
+                            </div>
+                        </div>
+                        <div class="card margin-bottom-20px red-custom-bg border-none">
+                            <div class="card-body">
+                                <h5 class="card-title text-blue-custom">INSCRIPCIONES CERRADAS</h5>
+                                <a><img class="artists-image" src="2025/cerradas.png" /></a>
                             </div>
                         </div>
                     </div>
