--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
                         <div class="card margin-bottom-20px red-custom-bg border-none">
                             <div class="card margin-bottom-20px red-custom-bg border-none">
                                 <div class="card-body">
+                                    <a href="resultados-nocturna" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">RESULTADOS NOCTURNA</a>
+                                    <a href="resultados-nocturna" target="_blank"><img class="artists-image" src="2025/resultados-nocturna.png" /></a>
+
                                     <a href="inscritos" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR LISTADO INSCRITOS</a>
                                     <a href="guia" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA COMPLETA</a>
                                     <a href="guia-cadeba" target="_blank" class="btn btn-primary custom-btn margin-bottom-20px blue-custom-bg">DESCARGAR GUÍA CADEBA</a>
