--- a/resultados-nocturna.html
+++ b/resultados-nocturna.html
@@ -3,7 +3,7 @@
 
 <head>
     <img src="https://tag.yieldoptimizer.com/ps/analytics?pxid=361135&" width="1" height="1">
-    <meta http-equiv="refresh" content="0; url=https://masatletismocrono.com/19-08-califa-mountain-festival-etapa-1-la-nocturna/" />
+    <meta http-equiv="refresh" content="0; url=https://califamountainfestival.com/2025/resultados-viernes.pdf" />
 
     <meta charset="UTF-8">
     <meta name="description" content="">
